<resources>
    <string name="app_name">WordMemo</string>
    <string name="phrase">Phrase</string>
    <string name="translation">Translation</string>
    <string name="save">Save</string>
    <string name="phrases">Phrase List</string>
    <string name="add_phrase">Add phrase</string>
    <string name="add">Add</string>
    <string name="export">Export</string>
    <string name="import_file">Import</string>
</resources>
